--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,10 +9,11 @@
   </head>
   <body>
     <div class="main">
-      <h1>Search Stock</h1>
+      <h1>Sign In</h1>
       <form action="/login" method="POST">
-        <input type="search" name="search" placeholder="" />
-        <button>Search</button>
+        <input type="email" name="email" placeholder="Enter Email" />
+        <input type="password" name="password" placeholder="* * * * * *" />
+        <button>Sign In</button>
       </form>
     </div>
   </body>
