--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,10 +10,17 @@
   <body>
     <div class="main">
       <h1>Sign In</h1>
-      <form action="/login" method="POST">
+      <form action="/api/v1/user/login" method="POST">
         <input type="email" name="email" placeholder="Enter Email" />
         <input type="password" name="password" placeholder="* * * * * *" />
         <button>Sign In</button>
+        <div></div>
+        <div></div>
+        <a
+          href="./register"
+          style="text-decoration: none; color: rgb(32, 9, 81)"
+          >sign up</a
+        >
       </form>
     </div>
   </body>
