--- a/views/search.ejs
+++ b/views/search.ejs
@@ -4,16 +4,173 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/luxon/2.3.2/luxon.min.js"
+      integrity="sha512-fcm3tvY+IeBaSiymWo7OJ+UqcY4BgPIDLr87iIys1s9yMmEKvilWMQaPb1s0HZb0M+aT+apZPAVQFrQ8DOYGlA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.1/dist/chart.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-adapter-luxon/1.1.0/chartjs-adapter-luxon.min.js"
+      integrity="sha512-M6umpUu17V/+t/YsUgEVBcI3aneYAW8W3o/8qmXGXglg1TumOEQQo2nvHPKVPHSv5ca3xAohHnpq16CSNsuLKg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <script
+      src="/js/chartjs-chart-financial.js"
+      type="text/javascript"
+    ></script>
+
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        
+        font-family: sans-serif;
+      }
+      .chartMenu {
+        width: 100vw;
+        height: 40px;
+        background: #1a1a1a;
+        color: rgb(56, 30, 38);
+      }
+      .chartMenu p {
+        padding: 10px;
+        font-size: 20px;
+      }
+      .chartCard {
+        width: 100vw;
+       
+        height: calc(100vh - 40px);
+        background: rgba(193, 114, 140, 0.2);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .chartBox {
+        margin-top: 5rem;
+        width: 700px;
+        padding: 20px;
+        border-radius: 20px;
+        border: solid 3px rgb(12, 4, 7);
+        background: white;
+      }
+    </style>
+    <style type="text/css">
+      @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+      body {
+        background: #93e2e5df;
+        font-family: 'Open Sans', sans-serif;
+      }
+
+      .search {
+        width: 100%;
+        position: relative;
+        display: flex;
+      }
+
+      .searchTerm {
+        width: 100%;
+        border: 2px solid #0b3339;
+        border-right: none;
+        padding: 6px;
+        height: 20px;
+        border-radius: 5px 0 0 5px;
+        outline: none;
+        color: #09110e;
+      }
+
+      .searchTerm:focus {
+        color: hsl(140, 50%, 2%);
+      }
+
+      .searchButton {
+        width: 40px;
+        height: 36px;
+        border: 1px solid #020501;
+        background: #2fe1d2;
+        text-align: center;
+        color: #fff;
+        border-radius: 0 5px 5px 0;
+        cursor: pointer;
+        font-size: 20px;
+      }
+
+      /*Resize the wrap to see the search bar change!*/
+      .wrap {
+        width: 30%;
+        position: absolute;
+        top: 20%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+      .chart {
+        width: 40%;
+        position: absolute;
+        top: 50%;
+        left: 20%;
+        transform: translate(-50%, -50%);
+      }
+    </style>
   </head>
+  
   <body>
-    <div class="main">
-      <h1>Search Stock</h1>
-      <form action="/login" method="POST">
-        <input type="search" name="search" placeholder="" />
-        <button>Search</button>
+    <%- include('./partials/nav.ejs') %>
+    <div class="wrap">
+      <form id="serch-bar" action="/api/v1/search" method="POST">
+        <div class="search">
+          <input
+            type="stockName"
+            id="stockName"
+            name="stockName"
+            class="searchTerm"
+            placeholder="Enter Stock name?"
+          />
+          <button type="submit" class="searchButton" placeholder="search">
+            <i class="fa fa-search"></i>>
+          </button>
+        </div>
       </form>
     </div>
+    <% if (ohlc!=null) { %>
+      <div class="chartCard">
+        <div class="chartBox">
+          <canvas id="myChart"></canvas>
+        </div>
+        
+    <% } %>
+    
+    
+    <script>
+      // setup
+      var error='<%-error%>'
+    
+      if ('<%-error%>') {
+        alert("stock symbol invalid")
+      }
+
+
+      var dataa='<%-ohlc%>';
+      const data = {
+        datasets: [
+          {
+            label:'<%-name%>',
+            data:  JSON.parse(dataa),
+          },
+        ],
+      };
+
+     
+
+      const myChart = new Chart(document.getElementById('myChart'), {
+        type: 'candlestick',
+        data,
+      });
+     
+   
+    </script>
   </body>
 </html>
